--- a/gemlikzeytinyagi.html
+++ b/gemlikzeytinyagi.html
@@ -29,20 +29,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 </head>
 <body>
+  <div class="w3-top">
+    <div class="w3-green w3-xlarge " style="height: 120px; " style="max-width:1200px;margin:auto">
+      <div class=" w3-center w3-padding-16">MB ZEYTİNCİLİK</div>
+      <div class="center-container">
+        <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-bar-button" style="text-decoration: none;">Ana Sayfa</a>
+        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button" style="text-decoration: none;" >Hakkımızda</a>
+        <a href="#footer" onclick="w3_close()" class="w3-bar-item w3-button" style="text-decoration: none;" >İletişim</a>
 
-<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Menü Kapat</a>
-  <a href="#top" onclick="w3_close()" class="w3-bar-item w3-bar-button">Zeytin ve Zeytinyağı</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"style="text-decoration: none;">Hakkımızda</a>
-  <a href="#FOOTER" onclick="w3_close()" class="w3-bar-item w3-button">İletişim</a>
-</nav>
-
-<div class="w3-green w3-xlarge " style="height: 205px; ">
-  <div class="container">
-    <div class="menu"><button class="w3-button w3-padding-16" onclick="w3_open()">☰</button></div>
-  </div>
-  <div class="logo"><h1 style="text-align: center; font-family: Cursive, sans-serif;">MB ZEYTİNCİLİK</h1></div>
-<br>
 <div class="w3-card-4 w3-white">
   <img src="resimler/zeytinyağı litrelik.jpg" alt="GEMLİK YAĞ" style="width:15%">
   <div class="w3-container w3-center">
@@ -51,16 +45,7 @@
   </div>
   
 </div>
- <!-- Footer -->
- <footer class="w3-row-padding w3-padding-32 ">
-    <div class="w3-third">
-      <h3>Bize Ulaşın </h3>
-      <p> Süleymanlı, caddesi no:524, 45200 Akhisar/Manisa
-        Tel : +90 266 432 35 00 +90 266 432 35 10
-        Fax : +90 266 432 35 10
-        Email : info@mbzeytincilik.com.tr</p>
-    </div>
-  
+
     
 <!-- End page content -->
 </div>
