--- a/index.html
+++ b/index.html
@@ -20,49 +20,74 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 </head>
 <body>
 
-<!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()"
-  class="w3-bar-item w3-button">Menü Kapat</a>
-  <a href="#top" onclick="w3_close()" class="w3-bar-item w3-bar-button" style="text-decoration: none;">Zeytin ve Zeytinyağı</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Hakkımızda</a>
-  <a href="#FOOTER" onclick="w3_close()" class="w3-bar-item w3-button">İletişim</a>
-  
-</nav>
-
 <!-- Top menu -->
-<div class="w3-green w3-xlarge " style="height: 205px; ">
-  <div class="container">
-    <div class="menu"><button class="w3-button w3-padding-16" onclick="w3_open()">☰</button></div>
+<div class="w3-top">
+  <div class="w3-green w3-xlarge " style="height: 120px; " style="max-width:1200px;margin:auto">
+    <div class=" w3-center w3-padding-16">MB ZEYTİNCİLİK</div>
+    <div class="center-container">
+      <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-bar-button" style="text-decoration: none;">Ana Sayfa</a>
+      <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button" style="text-decoration: none;" >Hakkımızda</a>
+      <a href="#footer" onclick="w3_close()" class="w3-bar-item w3-button" style="text-decoration: none;" >İletişim</a>
   </div>
-  <div class="logo"><h1 style="text-align: center; font-family: Cursive, sans-serif;">MB ZEYTİNCİLİK</h1></div>
+  
+  </div>
+</div>
 
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+  <div class="w3-content w3-section" style="max-width:500px">
+    <img class="mySlides w3-animate-top" src="resimler/edremit zeytinyağı.jpg" style="width:100%">
+    <img class="mySlides w3-animate-bottom" src="resimler/edremit kırma yeşil zeytin.jpg" style="width:100%">
+    <img class="mySlides w3-animate-top" src="resimler\domat yeşil zeytin.jpg" style="width:100%">
+    <img class="mySlides w3-animate-bottom" src="resimler/gemlik zeytinyağı.png" style="width:100%">
+  </div>
+  
+  <script>
+  var myIndex = 0;
+  carousel();
+  
+  function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 2500);    
+  }
+  </script>
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1700px;margin-top:100px">
 
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="dzeytin">
     <div class="w3-quarter">
-      <img src="resimler\domat yeşil zeytin.jpg" alt="Domat Zeytin " style="width:100%">
-      <h3> DOMAT </h3>
+      <img src="resimler\domat yeşil zeytin.jpg" alt="Domat Zeytin " class="buyuyen-resim" style="width:100%">
+      <h3>MB DOMAT </h3>
  <a class="w3-btn w3-ripple w3-yellow" href="domatyesilzeytin.html">BİLGİ EDİN </a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/edremit kırma yeşil zeytin.jpg" alt="edremit" style="width:100%">
-      <h3> EDREMİT </h3>
+      <img src="resimler/edremit kırma yeşil zeytin.jpg" alt="edremit" class="buyuyen-resim" style="width:100%">
+      <h3> MB EDREMİT </h3>
       <a class="w3-btn w3-ripple w3-yellow"   href="edremitkırmayesilzeytin.html">BİLGİ EDİN</a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/trilye zeytin.jpg" alt="trilye" style="width:100%">
-      <h3>TRİLYE</h3>
+      <img src="resimler/trilye zeytin.jpg" alt="trilye" class="buyuyen-resim" style="width:100%">
+      <h3>MB TRİLYE</h3>
       <a class="w3-btn w3-ripple w3-yellow"  class="w3-btn w3-ripple w3-yellow"  href="trilyezeytin.html">BİLGİ EDİN</a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/gemlik zeytin.jpg" alt="gemlik zeytin" style="width:100%">
-      <h3>GEMLİK</h3>
+      <img src="resimler/gemlik zeytin.jpg" alt="gemlik zeytin" class="buyuyen-resim" style="width:100%">
+      <h3>MB GEMLİK</h3>
       <a class="w3-btn w3-ripple w3-yellow"  href="gemlikzeytin.html">BİLGİ EDİN</a>
     </div>
 
@@ -71,26 +96,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="resimler/edremit zeytinyağı.jpg" alt="EDREMİT YAĞ" style="width:100%">
-      <h3>EDREMİT ZEYTİN YAĞI</h3>
+      <img src="resimler/edremit zeytinyağı.jpg" alt="EDREMİT YAĞ" class="buyuyen-resim" style="width:100%">
+      <h3>MB EDREMİT ZEYTİN YAĞI</h3>
      <a class="w3-btn w3-ripple w3-yellow"  href="edremitzeytinyagi.html">BİLGİ EDİN</a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/trilye zeytinyağı.jpg" alt="TRİLYE YAĞ" style="width:100%">
-      <h3> TRİLYE ZEYTİN YAĞI</h3>
+      <img src="resimler/trilye zeytinyağı.jpg" alt="TRİLYE YAĞ" class="buyuyen-resim" style="width:100%">
+      <h3>MB TRİLYE ZEYTİN YAĞI</h3>
      <a class="w3-btn w3-ripple w3-yellow"  href="trilyezeytinyagi.html">BİLGİ EDİN</a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/gemlik zeytinyağı.png" alt="GEMLİK YAĞ" style="width:100%">
-      <h3> GEMLİK ZEYTİN YAĞI </h3>
+      <img src="resimler/gemlik zeytinyağı.png" alt="GEMLİK YAĞ" class="buyuyen-resim"  style="width:100%">
+      <h3>MB GEMLİK ZEYTİN YAĞI </h3>
      <a class="w3-btn w3-ripple w3-yellow"  href="gemlikzeytinyagi.html">BİLGİ EDİN</a>
 
     </div>
     <div class="w3-quarter">
-      <img src="resimler/DOMAT ZEYTİN YAĞI.jpg" alt="DOMAT YAĞ" style="width:100%">
-      <h3> DOMAT ZEYTİN YAĞI</h3>
+      <img src="resimler/DOMAT ZEYTİN YAĞI.jpg" alt="DOMAT YAĞ" class="buyuyen-resim"  style="width:100%">
+      <h3>MB DOMAT ZEYTİN YAĞI</h3>
         <a  class="w3-btn w3-ripple w3-yellow"  href="domatzeytinyagi.html">BİLGİ EDİN</a> 
       </div>
      
@@ -111,7 +136,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- About Section -->
   <div class="w3-container w3-padding-32 w3-center">  
     <h3>MB ZEYTİNCİLİK HAKKINDA </h3><br>
-    <img src="resimler/TARLA.jpg" alt="TARLA" class="w3-image" style="display:block;margin:auto" width="800" height="533">
+    <img src="resimler/TARLA.jpg" alt="TARLA" class="w3-hover-grayscale" style="display:block;margin:auto" width="800" height="533">
     <div class="w3-padding-32">
       <h4><b>MB ZEYTİN </b></h4>
       <h6><i>Dalından Sofranıza!</i></h6>
@@ -122,6 +147,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <hr>
   
   <!-- Footer -->
+  <hr id="footer">
   <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
       <h3>Bize Ulaşın </h3>
